Styling: Prevent layout jumps when switching to a view with a scrollbar etc.

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/index.css
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/index.css
@@ -17,9 +17,15 @@
 }
 
 /* GENERAL */
-body {
+html {
   min-height: 100vh;
+  width: 100vw;
 }
+
+body {
+  overflow-x:hidden;
+}
+
 
 /* Typography */
 h1, h2 {
@@ -50,7 +56,7 @@ h2 {
 
 
 /* HEADER */
-header {
+header.container-fluid {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -59,6 +65,9 @@ header {
   min-height: 55px;
   border-bottom: 2px solid var(--clr-accent);
   color: var(--clr-text-light);
+  padding: .8rem;
+  padding-left: 4.8rem;
+  padding-right: 4.8rem;
 }
 
 
@@ -106,8 +115,8 @@ main {
 main h1 {
   display: flex;
   justify-content: center;
-  padding-left: 8rem;
-  padding-right: 8rem;
+  padding-left: 12rem;
+  padding-right: 12rem;
   padding-top: 16px;
   padding-bottom: 40px;
   margin-top: 16px;
